fix letter-spacing mixin

--- a/sass/utilities/mixins/_letter-spacing.scss
+++ b/sass/utilities/mixins/_letter-spacing.scss
@@ -1,8 +1,7 @@
-@mixin letter-spacing($val-spacing, $font-size, $units: px) {
-  @if $units == px {
-    letter-spacing: ($val-spacing * $font-size / 1000) + $units;
-  }
-  @if $units == em {
-    letter-spacing: ($val-spacing / 1000) + $units;
+@mixin letter-spacing($letter-spacing, $font-size, $unit: px) {
+  @if ($unit == px) {
+    letter-spacing: ($letter-spacing * $font-size / 1000) * 1px;
+  } @else if($unit == em) {
+    letter-spacing: ($letter-spacing / 1000) * 1em;
   }
 }
